# bourbon

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
bourbon/: q_learning.py  qtable.py  steps.py
docs/schemes/: rl.graffle
kandula/: Q_learning.py  capital.py  capitals.py  main_mult.py  multiply.py  q_learning.py  qtable.py  steps.py
notebooks/: capitals.ipynb  multiplication.ipynb  wind.ipynb
notebooks/rl_capitals/: events.out.tfevents.1683626244.MacBook-Pro-3.fritz.box.79405.2  events.out.tfevents.1683626286.MacBook-Pro-3.fritz.box.79602.0  events.out.tfevents.1683821491.MacBook-Pro-3.fritz.box.26718.0
notebooks/rl_multiplication/: events.out.tfevents.1683531317.MacBook-Pro-3.fritz.box.69017.0  events.out.tfevents.1683626943.MacBook-Pro-3.fritz.box.79104.6  events.out.tfevents.1683822028.MacBook-Pro-3.fritz.box.26730.0
notebooks/runs/May07_15-04-18_MacBook-Pro-3.fritz.box/: events.out.tfevents.1683464658.MacBook-Pro-3.fritz.box.65715.0
resources/: country_capital.json
rl-nlp/rl/: states.py
rl_nlp/: Q_learning.py  qtable.py  states.py  steps.py
rl_nlp/dialouge-manager/: dm.py
rl_nlp/dialouge_manager/: main.py  main_mult.py
