[tool.poetry]
name = "kandula"
version = "0.0.1"
description = "Kandula is a Python package for general Reinforcement Learning."
authors = ["meghdadFar <meghdad.farahmand@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["Reinforcement Learning"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = "2.0.0"
nltk = "3.8.1"
tensorboard = "2.13.0"
tqdm = "4.65.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.0.0"
pytest = ">=7.1"
pytest-cov = ">=3.0.0"
ipython = ">=8.4.0"
jupyter = "1.0.0"
sphinx = ">=v6.1.3"
sphinx-rtd-theme= "1.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"